# MetallicWGPU

./: Cargo.toml  README.md  index.html
src/: main.rs  shader.wsgl
src/compute/: mod.rs
src/compute/collatz/: mod.rs  shader.wsgl
xtask/: Cargo.toml
xtask/src/: main.rs
