[workspace]
members = [
    ".",
    "xtask"
]

[package]
name = "learn-metal"
version = "0.1.0"
edition = "2021"

[dependencies]
bytemuck = "1.20.0"
cfg-if = "1.0.0"
flume = "0.11.1"
log = "0.4.22"
pollster = "0.4.0"
wgpu = { version = "23.0.1", features = ["metal", "wgsl"] }
winit = "0.30.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.5"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
